70 fixing zoom in out picture (#71)
* blocked can not block to go under scale 1

* fixing image zoom with new library

* fixing modal picture overlaping z-index

* fix lint

* fix lint

* fix lint

* fix lint

* fix lint

--- a/src/Components/Carousel/Carousel.css
+++ b/src/Components/Carousel/Carousel.css
@@ -1,13 +1,17 @@
 .curr-img {
   grid-area: main;
   display: flex;
-}
-
-#main-img {
   width: 100%;
   height: 100%;
-  object-fit: contain;
-  margin: 0 -20%;
+}
+
+.main-img{
+  width: 100%;
+  max-width: 750px;
+  max-height: 950px;
+  height: auto;
+  align-content: center;
+  z-index: 1;
 }
 
 .carousel-wrapper {
@@ -16,14 +20,16 @@
     "main main main"
     ".  carousel  .";
   grid-template-rows: 60% 30%;
+  align-content: center;
 }
 
 .carousel {
   grid-area: carousel;
-  width: 50px;
+  width: 100px;
   display: flex;
   align-items: center;
   justify-content: center;
+  gap: 8px;
 }
 .carousel-img {
   border: solid 2px #ccc0;
@@ -31,8 +37,9 @@
   transition: all 750ms linear;
   width: 100%;
   height: fit-content;
-  max-height: 100px;
+  max-height: 130px;
   object-fit: contain;
+  z-index: 4;
 }
 
 .carousel-img.current {
@@ -46,18 +53,27 @@
   width: auto;
   margin: auto;
   padding: 16px;
-  color: white;
   font-weight: bold;
-  font-size: 18px;
+  font-size: 24px;
   transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
+  border-radius: 10px;
   user-select: none;
-  z-index: 1;
+  z-index: 3;
+  margin-bottom: 15%;
 }
 
 /* Position the "next button" to the right */
 .next {
   right: 0;
+  margin-left: 4px;
+  margin-right: 3px;
+  border-radius: 0 3px 3px 0;
+}
+
+.prev {
+  left: 0;
+  margin-right: 4px;
+  margin-left: 3px;
   border-radius: 3px 0 0 3px;
 }
 
@@ -65,5 +81,5 @@
 
 .prev:hover,
 .next:hover {
-  background-color: rgba(0, 0, 0, 0.8);
+  background-color: #bdbdbd;
 }
