--- a/src/Components/Modal/Modal.css
+++ b/src/Components/Modal/Modal.css
@@ -9,6 +9,7 @@
   background-color: rgba(0, 0, 0, 0.7);
   justify-content: center;
   align-items: center;
+  z-index: 5;
 }
 
 .overlay.active {
